[package]
name = "bme680-influx"
version = "0.1.0"
authors = ["marcelbuesing <marcel.buesing@daimler.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme680 = "0.4"
dotenv_codegen = "0.14"
futures-preview = "0.3.0-alpha.17"
futures-timer = "0.2"
futures-util-preview = "0.3.0-alpha.17"
influent = "0.5"
linux-embedded-hal = "0.2"
runtime = "0.3.0-alpha.5"